<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.ui.viewmodel.ShoesViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.InstructionDestinationFragment">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:padding="16dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:text="@string/instruction_label"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:textStyle="bold"
                android:padding="16dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:text="@string/instruction"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content">

            </TextView>

            <Button
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="bottom"
                android:id="@+id/instructionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_forward" />


        </LinearLayout>


    </FrameLayout>
</layout>



