<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.ui.viewmodel.ShoesViewModel" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="16dp"
        tools:context=".ui.fragments.WelcomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/welcome_to_the_show_store"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="16dp"
                android:text="@string/enjoy_all_variety_of_shoes"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <ImageButton
                android:background="@color/colorPrimary"
                android:id="@+id/welcome_navigation_imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="16dp"
                android:src="@drawable/ic_navigation_button" />

        </LinearLayout>


    </FrameLayout>
</layout>


